--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,6 @@
 
 primaryColor = '#FF60A7' # Pink
 
-backgroundColor = '#FFACD1' # Dark Pink
+backgroundColor =  '#FFBFDB' #FFACD1' # Lighter Pink
 
-secondaryBackgroundColor = '#FFBFDB' # Lighter Blue
+secondaryBackgroundColor = '#FFACD1' # Dark pink
